# sputniq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: pr_lint.yaml  pr_tests.yaml  publish_pypi.yaml  release.yaml
sputniq/: __init__.py  _exceptions.py  _registry.py  _retry.py  _task.py  _types.py  _worker.py
sputniq/integrations/: dishka.py
tests/: conftest.py  test_hooks.py  test_integrations_dishka.py  test_middleware.py  test_retry.py  test_task.py  test_typing.py  test_worker.py
