[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "sputniq"
version = "0.0.1"
description = "In-process async background task runner"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
lint = ["ruff>=0.9", "mypy>=1.14", "ty>=0.0.1a6"]
testing = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "covdefaults>=2.3",
    "fastapi>=0.115",
    "httpx>=0.27",
]
dishka = [
    "dishka<2.0"
]
dev = [
    {include-group = "lint"},
    {include-group = "testing"},
    {include-group = "dishka"},
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["sputniq", "tests"]

[[tool.mypy.overrides]]
module = ["dishka", "dishka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.test_integrations_dishka"
disable_error_code = ["misc", "untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["sputniq"]

[tool.coverage.report]
fail_under = 79

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
